--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                                 <h1 class="text-white">Learn <span
                                         class="d-block d-md-inline-block text-scramble js-text-scramble">Agriculture</span>
                                 </h1>
-                                <p class="lead mb-32pt mb-lg-48pt text-white">Business, Technology and Creative Skills
+                                <p class="lead mb-32pt mb-lg-48pt text-white">Get Paid while Learning Business, Technology and Creative Skills
                                     taught by industry experts. Explore a wide range of skills with our professional
                                     tutorials.</p>
                                 <a href="library.html" class="btn btn-lg btn-white btn--raised mb-16pt">Browse
@@ -222,6 +222,17 @@
                             <div class="flex">
                                 <p class="mb-0"><strong>Unlimited Access</strong></p>
                                 <p class="text-black-70 mb-0">Unlock Library and learn any topic with one subscription.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="d-flex col-md align-items-center">
+                            <div
+                                class="rounded-circle bg-primary w-64 h-64 d-inline-flex align-items-center justify-content-center mr-16pt">
+                                <i class="material-icons text-primary-light">update</i>
+                            </div>
+                            <div class="flex">
+                                <p class="mb-0"><strong>Get Paid </strong></p>
+                                <p class="text-black-70 mb-0">Get paid as you learn payment based on quiz to enable consitency.
                                 </p>
                             </div>
                         </div>
