--- a/index.html
+++ b/index.html
@@ -1455,7 +1455,7 @@
                                     <h4 class="text-70">Join us</h4>
                                     <nav class="nav nav-links nav--flush flex-column">
                                         <a class="nav-link" href="#pricing">Pricing</a>
-                                        <a class="nav-link" href="#login">Login</a>
+                                        <a class="nav-link" href="login.html">Login</a>
                                         <a class="nav-link" href="#signup">Sign Up</a>
                                         <a class="nav-link" href="#signup-payment">Payment</a>
                                     </nav>
@@ -1578,7 +1578,7 @@
                     <div class="dropdown-menu dropdown-menu-right">
                         <a class="dropdown-item" href="#pricing">Pricing</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#login">Login</a>
+                        <a class="dropdown-item" href="login.html">Login</a>
                         <a class="dropdown-item" href="#signup">Signup</a>
                         <a class="dropdown-item" href="#signup-payment">Payment</a>
                         <a class="dropdown-item" href="#reset-password">Reset Password</a>
@@ -1707,7 +1707,7 @@
                                 <a class="sidebar-menu-button" href="#pricing">Pricing</a>
                             </li>
                             <li class="sidebar-menu-item">
-                                <a class="sidebar-menu-button" href="#login">Login</a>
+                                <a class="sidebar-menu-button" href="login.html">Login</a>
                             </li>
                             <li class="sidebar-menu-item">
                                 <a class="sidebar-menu-button" href="#signup">Signup</a>
