-pricing edit -chng passwrd -reset-psswd -student-edit-acc-profile pages

--- a/pricing.html
+++ b/pricing.html
@@ -534,65 +534,65 @@
                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Student</a>
                    <div class="dropdown-menu">
                       
-                       <a class="dropdown-item" href="#student-dashboard">Dashboard</a>
-                       <a class="dropdown-item" href="#student-my-courses">My Courses</a>
-                       <a class="dropdown-item" href="#student-take-course">Take Course</a>
-                       <a class="dropdown-item" href="#student-take-lesson">Take Lesson</a>
+                       <a class="dropdown-item" href="student-dashboard.html">Dashboard</a>
+                       <a class="dropdown-item" href="student-my-courses.html">My Courses</a>
+                       <a class="dropdown-item" href="student-take-course.html">Take Course</a>
+                       <a class="dropdown-item" href="student-take-lesson.html">Take Lesson</a>
                        <div class="dropdown-divider"></div>
-                       <a class="dropdown-item" href="#student-take-quiz">Take Quiz</a>
-                       <a class="dropdown-item" href="#student-quiz-result-details">Quiz Result</a>
-                       <a class="dropdown-item" href="#student-quiz-results">My Quizzes</a>
+                       <a class="dropdown-item" href="student-take-quiz.html">Take Quiz</a>
+                       <a class="dropdown-item" href="student-quiz-result-details.html">Quiz Result</a>
+                       <a class="dropdown-item" href="student-quiz-results.html">My Quizzes</a>
                        <div class="dropdown-divider"></div>
-                       <a class="dropdown-item" href="#student-path-assessment">Skill Assessment</a>
-                       <a class="dropdown-item" href="#student-path-assessment-result">Skill Result</a>
+                       <a class="dropdown-item" href="student-path-assessment.html">Skill Assessment</a>
+                       <a class="dropdown-item" href="student-path-assessment-result.html">Skill Result</a>
                    </div>
                </li>
                <li class="nav-item dropup">
-                   <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Instructor</a>
+                   <a href="" class="nav-link dropdown-toggle" data-toggle="dropdown">Instructor</a>
                    <div class="dropdown-menu">
-                       <a class="dropdown-item" href="#instructor-dashboard">Dashboard</a>
-                       <a class="dropdown-item" href="#instructor-courses">Courses</a>
-                       <a class="dropdown-item" href="#instructor-quizzes">Quizzes</a>
+                       <a class="dropdown-item" href="instructor-dashboard.html">Dashboard</a>
+                       <a class="dropdown-item" href="instructor-courses.html">Courses</a>
+                       <a class="dropdown-item" href="instructor-quizzes.html">Quizzes</a>
                        <div class="dropdown-divider"></div>
-                       <a class="dropdown-item" href="#instructor-edit-course">Edit Course</a>
-                       <a class="dropdown-item" href="#instructor-edit-quiz">Edit Quiz</a>
+                       <a class="dropdown-item" href="instructor-edit-course.html">Edit Course</a>
+                       <a class="dropdown-item" href="instructor-edit-quiz.html">Edit Quiz</a>
                        <div class="dropdown-divider"></div>
-                       <a class="dropdown-item" href="#instructor-earnings">Earnings</a>
-                       <a class="dropdown-item" href="#instructor-statement">Statement</a>
+                       <a class="dropdown-item" href="instructor-earnings.html">Earnings</a>
+                       <a class="dropdown-item" href="instructor-statement.html">Statement</a>
                    </div>
                </li>
                <li class="nav-item dropup">
-                   <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Community</a>
+                   <a href="" class="nav-link dropdown-toggle" data-toggle="dropdown">Community</a>
                    <div class="dropdown-menu">
-                       <a class="dropdown-item" href="#student-discussions">Discussions</a>
-                       <a class="dropdown-item" href="#student-discussion">Discussion Details</a>
-                       <a class="dropdown-item" href="#student-discussions-ask">Ask Question</a>
+                       <a class="dropdown-item" href="student-discussions.html">Discussions</a>
+                       <a class="dropdown-item" href="student-discussion.html">Discussion Details</a>
+                       <a class="dropdown-item" href="student-discussions-ask.html">Ask Question</a>
                        <div class="dropdown-divider"></div>
-                       <a class="dropdown-item" href="#student-profile">Student Profile</a>
-                       <a class="dropdown-item" href="#instructor-profile">Instructor Profile</a>
+                       <a class="dropdown-item" href="student-profile.html">Student Profile</a>
+                       <a class="dropdown-item" href="instructor-profile.html">Instructor Profile</a>
                    </div>
                </li>
                <li class="nav-item dropup">
                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Account</a>
                    <div class="dropdown-menu dropdown-menu-right">
-                       <a class="dropdown-item active" href="#pricing">Pricing</a>
+                       <a class="dropdown-item active" href="pricing.html">Pricing</a>
                        <div class="dropdown-divider"></div>
                        <a class="dropdown-item " href="login.html">Login</a>
-                       <a class="dropdown-item" href="#signup">Signup</a>
-                       <a class="dropdown-item" href="#signup-payment">Payment</a>
-                       <a class="dropdown-item" href="#reset-password">Reset Password</a>
-                       <a class="dropdown-item" href="#change-password">Change Password</a>
+                       <a class="dropdown-item" href="signup.html">Signup</a>
+                       <a class="dropdown-item" href="signup-payment.html">Payment</a>
+                       <a class="dropdown-item" href="reset-password.html">Reset Password</a>
+                       <a class="dropdown-item" href="change-password.html">Change Password</a>
                        <div class="dropdown-divider"></div>
-                       <a class="dropdown-item" href="#student-edit-account">Edit Account</a>
-                       <a class="dropdown-item" href="#student-edit-account-profile">Profile &amp; Privacy</a>
-                       <a class="dropdown-item" href="#student-edit-account-notifications">Email Notifications</a>
-                       <a class="dropdown-item" href="#student-edit-account-password">Account Password</a>
+                       <a class="dropdown-item" href="student-edit-account.html">Edit Account</a>
+                       <a class="dropdown-item" href="student-edit-account-profile.html">Profile &amp; Privacy</a>
+                       <a class="dropdown-item" href="student-edit-account-notifications.html">Email Notifications</a>
+                       <a class="dropdown-item" href="student-edit-account-password.html">Account Password</a>
                        <div class="dropdown-divider"></div>
-                       <a class="dropdown-item" href="#student-billing">Subscription</a>
-                       <a class="dropdown-item" href="#student-billing-upgrade">Upgrade Account</a>
-                       <a class="dropdown-item" href="#student-billing-payment">Payment Information</a>
-                       <a class="dropdown-item" href="#student-billing-history">Payment History</a>
-                       <a class="dropdown-item" href="#student-billing-invoice">Invoice</a>
+                       <a class="dropdown-item" href="student-billing.html">Subscription</a>
+                       <a class="dropdown-item" href="student-billing-upgrade.html">Upgrade Account</a>
+                       <a class="dropdown-item" href="student-billing-payment.html">Payment Information</a>
+                       <a class="dropdown-item" href="student-billing-history.html">Payment History</a>
+                       <a class="dropdown-item" href="student-billing-invoice.html">Invoice</a>
                    </div>
                </li>
               
